// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile Tests tile Snapshot can move matches current snapshot 1`] = `
<div
  class="player1 hex tile tilecanmove"
  draggable="true"
  tabindex="0"
  title="Player-1 tileCanMove"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      class="creature"
      href="#tilecanmove"
    />
  </svg>
</div>
`;

exports[`tile Tests tile Snapshot no moves matches current snapshot 1`] = `
<div
  class="player0 hex tile tilenomove"
  title="Player-0 tileNoMove"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      class="creature"
      href="#tilenomove"
    />
  </svg>
</div>
`;

exports[`tile Tests tile Snapshot when stacked matched snapshot 1`] = `
<div
  class="player0 hex stacked tile tilenomove"
  title="Player-0 tileNoMove"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      class="creature"
      href="#tilenomove"
    />
  </svg>
</div>
`;

exports[`tile Tests tile render has creature 1`] = `
<div
  class="player1 hex tile tilecanmove"
  draggable="true"
  tabindex="0"
  title="Player-1 tileCanMove"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      class="creature"
      href="#tilecanmove"
    />
  </svg>
</div>
`;

exports[`tile Tests tile render has creature 2`] = `
<div
  class="player0 hex tile tilenomove"
  title="Player-0 tileNoMove"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      class="creature"
      href="#tilenomove"
    />
  </svg>
</div>
`;
